src/tests/fixtures/resolver_context/MultipleContextValuesUsed.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlContext */
type GratsContext = {
  greeting: string;
};

/** @gqlContext */
type AlsoGratsContext = {
  greeting: string;
};

/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(args: unknown, ctx: GratsContext): string {
    return ctx.greeting;
  }
  /** @gqlField */
  alsoGreeting(args: unknown, ctx: AlsoGratsContext): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/MultipleContextValuesUsed.invalid.ts:7:1 - error: Unexpected multiple `@gqlContext` definitions. Only one type may be annotated with `@gqlContext` in a Grats project.

7 type AlsoGratsContext = {
  ~~~~~~~~~~~~~~~~~~~~~~~~~
8   greeting: string;
  ~~~~~~~~~~~~~~~~~~~
9 };
  ~~

  src/tests/fixtures/resolver_context/MultipleContextValuesUsed.invalid.ts:2:1
    2 type GratsContext = {
      ~~~~~~~~~~~~~~~~~~~~~
    3   greeting: string;
      ~~~~~~~~~~~~~~~~~~~
    4 };
      ~~
    A different context definition was found here
